--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "chai": "^4.2.0",
     "express": "^4.17.1",
     "mocha": "^8.1.3",
+    "newrelic": "^7.0.2",
     "nodemon": "^2.0.4",
     "path": "^0.12.7",
     "supertest": "^5.0.0"
